==> nguyen1241997/Smart-Home/scr/mfrc522.c <==
#include "mfrc522.h" //this library includes the stm32f4xx.h
#include "main.h"
#define MAXRLEN    18
#define MF522_PORT_RST     GPIOA
#define MF522_PIN_RST      GPIO_Pin_3
#define MF522_RST_SET      GPIO_SetBits(MF522_PORT_RST,MF522_PIN_RST); //GPIO_SetBits(GPIOA,GPIO_Pin_3)
#define MF522_RST_RESET    GPIO_ResetBits(MF522_PORT_RST,MF522_PIN_RST);
#define MF522_PORT_CS      GPIOA
#define MF522_PIN_CS       GPIO_Pin_2
#define MF522_CS_ENABLE    GPIO_ResetBits(MF522_PORT_CS,MF522_PIN_CS); //SDA is CS pin
#define MF522_CS_DISABLE   GPIO_SetBits(MF522_PORT_CS,MF522_PIN_CS);

void MF522_init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	SPI_InitTypeDef   SPI_InitStructure;

	//SDA: PA2 | SCK:PA5 | MOSI: PA7 | MISO: PA6 | RST: PA3

  /* Enable SCK, MOSI and MISO GPIO clocks and CS  GPIO clock*/
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);

  GPIO_PinAFConfig(GPIOA, GPIO_PinSource5, GPIO_AF_SPI1);
  GPIO_PinAFConfig(GPIOA, GPIO_PinSource6, GPIO_AF_SPI1);
  GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_SPI1);

  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

  /* SPI SCK pin configuration */
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

  /* SPI  MOSI pin configuration */
  GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_7;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

  /* SPI MISO pin configuration */
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

  /* Configure GPIO PIN for Chip select and nss */
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2|GPIO_Pin_3;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

	/* Enable the SPI periph */
	  RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
  /* SPI configuration -------------------------------------------------------*/
    SPI_I2S_DeInit(SPI1);
    SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
    SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
    SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
    SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
    SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
    SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_8;
    SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
    SPI_InitStructure.SPI_CRCPolynomial = 7;
    SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
    SPI_Init(SPI1, &SPI_InitStructure);
    /* Enable SPI1  */
    SPI_Cmd(SPI1, ENABLE);
}

unsigned char SPI_transfer(unsigned char data){

	uint32_t val;
	//This function is just exactly the same as void 'SPI_I2S_SendData(SPI_TypeDef* SPIx, uint16_t Data)'
	SPI1->DR = data; // write data to be transmitted to the SPI data register
	while( !(SPI1->SR & SPI_I2S_FLAG_TXE) ); // wait until transmit complete
	while( !(SPI1->SR & SPI_I2S_FLAG_RXNE) ); // wait until receive complete
	while( SPI1->SR & SPI_I2S_FLAG_BSY ); // wait until SPI is not busy anymore
	return SPI1->DR; // return received data from SPI data register
}

uint8_t MFRC522_ReadRegister(uint8_t Address)
{
  uint8_t val;
	MF522_CS_ENABLE;
	delay_10_us(1);
	//address format:1XXXXXX0
	SPI_transfer(((Address<<1)&0x7E) | 0x80);
	val = SPI_transfer(0x00);
	MF522_CS_DISABLE;
	delay_10_us(1);
	return val;
}

void MFRC522_WriteRegister(uint8_t Address, uint8_t value)
{  
	MF522_CS_ENABLE;
	delay_10_us(1);
	//address format:0XXXXXX0
	SPI_transfer((Address<<1)&0x7E);
	SPI_transfer(value);
	MF522_CS_DISABLE;
	delay_10_us(1);
}
